# geollm

./: .gitignore  README.md  bandit.yaml  pyproject.toml
backend/: main.py  utils.py
backend/geo_llm_client/: exceptions.py  geo_llm_client.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: geollm.js  main.js  styles.css
