[project]
name = "geollm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.118.2",
    "geopy>=2.4.1",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.10",
    "langchain-openai>=0.3.35",
    "pydantic>=2.12.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pip-audit>=2.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.0",
]

[tool.ruff]
src = ["backend"]              # only scan your backend code
exclude = ["frontend"]         # skip frontend folder
line-length = 79
lint.select = ["E", "F", "B", "UP", "I"]  # core rule sets

[tool.mypy]
python_version = "3.13"
files = ["backend"]
ignore_missing_imports = true
